@@ -1,12 +1,20 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.1 2003/04/05 05:32:54 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.2 2003/04/05 06:02:08 shermann Exp $
 
 *karamba-0.13-1 (05 Mar 2003)
+
+  05 Mar 2003; Stephan Hermann <sh@sourcecode.de> :
+  Changed description, used ${PV} instead of ${PN}
+  
   05 Mar 2003; Stephan Hermann <sh@sourcecode.de> :
   New version released. Added notatun sensor.
 
 *karamba-0.12-1 (03 Mar 2003)
+
+  05 Mar 2003; Stephan Hermann <sh@sourcecode.de> :
+  Changed description, used ${PV} instead of ${PN}
+
 
   03 Mar 2003; Stephan Hermann <sh@sourcecode.de> :
   Initial Import.
